sys/dev/hid/hid.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: hid.c,v 1.5 2022/03/13 11:35:47 riastradh Exp $	*/
+/*	$NetBSD: hid.c,v 1.6 2023/10/17 02:46:57 nat Exp $	*/
 /*	$FreeBSD: src/sys/dev/usb/hid.c,v 1.11 1999/11/17 22:33:39 n_hibma Exp $ */
 
 /*
@@ -32,7 +32,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: hid.c,v 1.5 2022/03/13 11:35:47 riastradh Exp $");
+__KERNEL_RCSID(0, "$NetBSD: hid.c,v 1.6 2023/10/17 02:46:57 nat Exp $");
 
 #ifdef _KERNEL_OPT
 #include "opt_usb.h"
@@ -519,13 +519,15 @@ hid_is_collection(const void *desc, int size, uint8_t id, uint32_t usage)
 			    hi.kind, hi.report_ID, hi.usage, coll_usage));
 
 		if (hi.kind == hid_collection &&
-		    hi.collection == HCOLL_APPLICATION)
+		    (hi.collection == HCOLL_APPLICATION ||
+		    hi.collection == HCOLL_PHYSICAL ||
+		    hi.collection == HCOLL_LOGICAL))
 			coll_usage = hi.usage;
 
 		if (hi.kind == hid_endcollection)
 			coll_usage = ~0;
 
-		if (hi.kind == hid_input &&
+		if (hi.kind == hid_collection &&
 		    coll_usage == usage &&
 		    hi.report_ID == id) {
 			DPRINTFN(2,("hid_is_collection: found\n"));
